<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/myBackgroundColor"
    tools:context="com.example.simeon_dee.mobileattendance.RegisterUserActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Account Registration"
        android:shadowRadius="10"
        android:shadowColor="@color/shadowColor"
        android:gravity="center_horizontal"
        android:layout_marginBottom="16dp"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimary"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:visibility="gone"/>

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp"
        android:layout_marginTop="24dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/uname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_username"
                android:layout_marginBottom="16dp"/>

            <EditText
                android:id="@+id/pswd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:imeActionId="6"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:layout_marginBottom="16dp"/>
            <EditText
                android:id="@+id/comfirmpswd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_confirm_password"
                android:imeActionId="6"
                android:imeActionLabel="@string/action_confirm_password"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:layout_marginBottom="16dp"/>

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:imeActionId="6"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"
                android:layout_marginBottom="16dp"/>

            <Spinner
                android:id="@+id/spinUserType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/user_category"
                android:layout_marginBottom="16dp"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                style="@android:style/TextAppearance.Large"/>

            <Button
                android:id="@+id/btRegisterNew"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/action_register"
                android:textStyle="bold"
                android:layout_gravity="end"
                android:background="@color/colorAccent"
                android:textColor="@color/myTextColor"
                android:padding="16dp"
                android:onClick="createUserButtonClickedHandler"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
